# test-task-for-horizont-2023

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
include/something/: something.hpp
include/test_task/: test_task.hpp
src/: main.cpp  something.cpp  test_task.cpp
tests/: main.test.cpp  something.test.cpp  test_task.test.cpp
